k8s/namespaces/vault/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
      app.kubernetes.io/part-of: vault
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault
        app.kubernetes.io/part-of: vault
    spec:
      automountServiceAccountToken: true
      serviceAccountName: vault
      containers:
      - name: vault
        image: vault:1.0.3
        imagePullPolicy: IfNotPresent
        args: ['server']
        securityContext:
          capabilities:
            add: ['IPC_LOCK']
        ports:
        - containerPort: 8200
          name: api
          protocol: TCP
        - containerPort: 8201
          name: cluster
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /v1/sys/health?standbyok=true
            port: 8200
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: vault-tls
          mountPath: /etc/vault/tls
        - name: gcp-service-account
          mountPath: /var/run/secrets/gcp
          readOnly: true
      volumes:
      - name: vault-tls
        secret:
          secretName: vault-tls
      - name: gcp-service-account
        secret:
          secretName: gcp-service-account
