k8s/namespaces/vault/02-service.yml

apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
spec:
  ports:
    - name: api
      port: 8200
      protocol: TCP
    - name: cluster
      port: 8201
      protocol: TCP
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
