k8s/namespaces/vault/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
spec:
  tls:
  - hosts:
    - vault.k8s.lolwtf.ca
    secretName: vault-tls
  rules:
  - host: vault.k8s.lolwtf.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: vault
          servicePort: 8200
