k8s/namespaces/vault/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/allow-http: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
spec:
  tls:
  - hosts:
    - vault.home.pulsifer.ca
    secretName: vault.home.pulsifer.ca
  defaultBackend:
    service:
      name: vault
      port:
        number: 8200
  rules:
  - host: vault.home.pulsifer.ca
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 8200
        path: /
        pathType: Prefix
