k8s/namespaces/vault/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: vault
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
