k8s/namespaces/vault/01-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
spec:
  egress:
  - {}
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 8200
      protocol: TCP
    - port: 8201
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      app.kubernetes.io/part-of: vault
  policyTypes:
  - Ingress
  - Egress
